# quantum-arithmetic-research

./: .dockerignore  .env.example  .gitignore  .gitmodules  46_seismic_expanded.py  46_seismic_expanded_results.json  46_seismic_surrogate_results.json  46_seismic_surrogates.py  46_seismic_topographic_observer.py  47_climate_topographic_observer.py  48_teleconnection_results.json  48_teleconnection_surrogate_v2_results.json  48_teleconnection_surrogates.py  48_teleconnection_surrogates_v1_CIRCULAR_BUG.py  48_teleconnection_topographic_observer.py  49_era5_multilayer.py  49_era5_multilayer_results.json  49_forecast_coherence_observer.py  49_forecast_coherence_surrogate_v2_results.json  49_forecast_coherence_surrogates.py  49_forecast_coherence_surrogates_v1_CIRCULAR_BUG.py  50_cardiac_preregistered.py  50_cardiac_preregistered_results.json  51_bearing_preregistered.py  51_bearing_preregistered_results.json  52_network_preregistered.py  52_network_preregistered_results.json  53_emg_preregistered.py  53_emg_preregistered_results.json  54_qa_timeseries_invariants.py  55_qa_synchronous_harmonics.py  56_qa_witt_tower_oracle.py  57_qa_dilution_detector.py  58_qa_wss_orbit_characterisation.py  59_qa_filter_bank.py  60_qa_witt_empirical_validation.py  61_qa_witt_financial_filterbank.py  62_qa_witt_multi_instrument.py  63_qa_witt_rolling_window.py  AGENTS.md  (+511 more)
qa_alphageometry/: Cargo.toml  IR_DELIVERABLES.md  IR_IMPLEMENTATION_SUMMARY.md  IR_MODULE_STRUCTURE.txt  IR_QUICK_REFERENCE.md  QA_ALPHAGEOMETRY_APPENDIX_WEEK4.md  QA_ALPHAGEOMETRY_PAPER.md  QA_ALPHAGEOMETRY_WEEK4_PROGRESS.md  README.md  WEEK4_BENCHMARK_GUIDE.md  WEEK4_COMPLETE.md  test_ir_compilation.sh
qa_alphageometry/bindings/: Cargo.toml
qa_alphageometry/bindings/src/: lib.rs
qa_alphageometry/cli/: Cargo.toml
qa_alphageometry/cli/src/: main.rs
qa_alphageometry/core/: Cargo.toml  analyze_phase2.py
qa_alphageometry/core/docs/track1/: TRACK1_COMPLETE_SUMMARY.md  TRACK1_IMPLEMENTATION_LOG.md  TRACK1_PHASE6_TELEMETRY_RESULTS.md  TRACK1_README.md  (+8 more)
qa_alphageometry/core/examples/: ir_demo.rs
qa_alphageometry/core/scripts/: branching_score.py  generate_high_branching.py  generate_rulebatch_problems.py  generate_synthetic_enhanced.py  generate_synthetic_problems.py  generate_track1_problems.py  sanity_check_problems.py
qa_alphageometry/core/src/: lib.rs
qa_alphageometry/core/tests/: benchmark.rs  export_searchresult_json.rs  loader_e2e.rs  synthetic_structure_probe.rs  track1_phase6_telemetry.rs  track1_rulebatch_validation.rs  week4_benchmark.rs  week4_session3_ablation.rs
qa_alphageometry/figures/: results_table.tex
qa_alphageometry/scripts/: week4_generate_plots.py
qa_arithmetic/: README.md  pyproject.toml
qa_arithmetic/qa_arithmetic/: __init__.py  core.py  identities.py
qa_arithmetic/tests/: test_core.py
qa_observer/: pyproject.toml
qa_observer/qa_observer/: __init__.py  core.py  demo.py  orbits.py  surrogates.py
qa_observer/tests/: test_core.py
(+6842 files in other folders)
