[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-arithmetic"
version = "0.1.0"
description = "Quantum Arithmetic — modular Fibonacci dynamics, orbit classification, and the 16 identities"
authors = [{name = "Will Dale"}]
license = "MIT"
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["qa_arithmetic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
