[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-observer"
version = "0.2.0"
description = "QA Coherence Index — domain-general structural indicator from Quantum Arithmetic"
authors = [{name = "Will Dale"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "qa-arithmetic>=0.1.0",
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
